--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.6.0
 cloudinary==1.32.0
+crispy-bootstrap5==0.7
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.19
 django-allauth==0.54.0
+django-crispy-forms==2.0
+django-resized==1.0.2
+django-richtextfield==1.6.1
 gunicorn==20.1.0
 oauthlib==3.2.2
+Pillow==9.5.0
 psycopg2==2.9.6
 PyJWT==2.7.0
 python3-openid==3.2.0
