--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.6.0
+black==23.3.0
+click==8.1.3
 cloudinary==1.32.0
 crispy-bootstrap5==0.7
 dj-database-url==0.5.0
@@ -10,6 +12,7 @@ django-resized==1.0.2
 django-richtextfield==1.6.1
 gunicorn==20.1.0
 oauthlib==3.2.2
+pathspec==0.11.1
 Pillow==9.5.0
 psycopg2==2.9.6
 PyJWT==2.7.0
